-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.12
-
None
-
Android X86, clang
-
-
6275e037bfe532d12ecd76913d5d36a91c1d5034 (qt/qtbase/5.13)
tst_QStorageInfo: 1 failed
FAIL! : tst_QStorageInfo::storageList() 'volumes.contains(root)' returned FALSE. ()
agent:2019/02/04 23:58:56 build.go:192: Loc: [tst_qstorageinfo.cpp(162)]
Coin build:
https://testresults.qt.io/coin/integration/qt/qt5/tasks/nightly_1550367792
- is required for
-
QTBUG-73509 Fix qtbase tests for android
-
- Closed
-