src/corelib/io/qstorageinfo_unix.cpp
@@ -220,7 +220,7 @@ static bool shouldIncludeFs(const QStorageIterator &it)
         return false;
     }
 
-#ifdef Q_OS_LINUX
+#if defined(Q_OS_LINUX) && !defined(Q_OS_ANDROID)
     if (it.fileSystemType() == "rootfs")
         return false;
 #endif
@@ -846,7 +846,7 @@ QList<QStorageInfo> QStorageInfoPrivate::mountedVolumes()
 
         const QString mountDir = it.rootPath();
         QStorageInfo info(mountDir);
-        if (info.bytesTotal() == 0)
+        if (info.bytesTotal() == 0 && info != root())
             continue;
         volumes.append(info);
     }
